--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button id="chart-button">Dexscreener</button>
       </div>
 
-      <button id="buy-button">&nbsp<span class="accent-text">Trade NALA</span>
+      <button id="buy-button">&nbsp<span class="accent-text">Trade $LICK</span>
         <div id="buy-border-top" class="border-horizontal" style="z-index: 19;">
           <img src="./metadata/border-element.png"><img src="./metadata/border-element.png">
         </div>
@@ -44,8 +44,8 @@
     <div id="main-content-container" style="z-index: 20;">
 
       <div id="main-content" style="z-index: 20;">
-        <img id="nala-main-img" src="./metadata/photo_2024-03-26 09.43.35.jpeg" alt="Nala as Dinosaur">
-        <h1 class="header" style="z-index: 20;"><span class="accent-text">$NALA</span> on <span class="solana-text">Solana</span></h1>
+        <img id="nala-main-img" src="./metadata/pfp.jpg" alt="Nala as Dinosaur">
+        <h1 class="header" style="z-index: 20;"><span class="accent-text">$LICK</span> <span class="solana-text">Cat</span></h1>
       </div>
       
       <div id="main-border-top" class="border-horizontal" style="z-index: 19;">
@@ -55,10 +55,10 @@
         <img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png">
       </div>
       <div id="main-border-left" class="border-vertical" style="z-index: 19;">
-        <img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png">
+        <img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png">
       </div>
       <div id="main-border-right" class="border-vertical" style="z-index: 19;">
-        <img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png">
+        <img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png"><img src="./metadata/border-element.png">
       </div>
 
 
@@ -66,7 +66,7 @@
 
     <div id="footer-container" style="z-index: 20;">
       <div id="footer-content" style="z-index: 20;">
-        <span>2KoP78RUzDuimgZm6e2k1HX9nftnGLvfAAeisCAJGP8b</span>
+        <span>6SPbrnC3z4r42jbFBgC3gatF6dKCiDZsKWPtbKa95cVz</span>
         <button id="copy-ca-button">Copy Contract</button>
       </div>
 
